# bdoffset

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/bdoffset/: __main__.py  cli.py  holidays.py  offset.py
tests/: test_holidays.py  test_offset.py
