[project]
name = "bdoffset"
version = "0.1.0"
description = "Business day offset CLI — compute a date N exchange business days away"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
bdoffset = "bdoffset.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdoffset"]

[dependency-groups]
dev = ["pytest>=8", "mypy>=1.13", "ruff>=0.9"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
